# gandi-mcp

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  drift-check.yml
docs/assets/: _make_assets.py
docs/superpowers/plans/: 2026-05-03-test-maturity.md  2026-05-12-live-contract-tests-pr-a-scaffold.md  2026-05-15-cassette-drift-detection.md
docs/superpowers/specs/: 2026-05-03-test-maturity-design.md  2026-05-12-live-contract-tests-90pct-design.md  2026-05-15-cassette-drift-detection-design.md
scripts/: cassette_drift.py  check_coverage_thresholds.py
src/gandi_mcp/: __init__.py  __main__.py  _logging.py  config.py  errors.py  server.py
src/gandi_mcp/clients/: __init__.py  base.py  gandi.py
src/gandi_mcp/tools/: __init__.py  _common.py  billing.py  certificate.py  domain.py  email.py  livedns.py  organization.py
tests/: conftest.py
tests/contract/: _redact.py  conftest.py  test_smoke.py
tests/integration/: test_live_smoke.py
tests/mocked/: __init__.py  conftest.py  test_billing_error_paths.py  test_billing_tools.py  test_cert_tools.py  test_certificate_error_paths.py  test_domain_error_paths.py  test_domain_tools.py  test_email_error_paths.py  test_email_tools.py  test_livedns_error_paths.py  test_livedns_tools.py  test_org_tools.py  test_organization_error_paths.py
tests/property/: test_seg_encoding.py
tests/unit/: test_base_client_http_wrappers.py  test_base_client_init.py  test_base_client_parse_json.py  test_base_client_request.py  test_base_client_status.py  test_cassette_drift.py  test_cassette_drift_cli.py  test_client_base.py  test_client_error_bodies.py  test_client_error_mapping.py  test_client_parse_json.py  test_client_path_prefix.py  test_client_retry.py  test_client_status_mapping.py  test_client_urlencoding.py  test_clients_base_parse_json_properties.py  test_clients_base_retry_properties.py  test_clients_gandi_seg_properties.py  test_config.py  test_contract_redact.py  test_domain_status.py  test_errors_mapping_properties.py  test_handle_client_error.py  test_logging.py  test_safety_gate_runtime.py  test_safety_gates.py  test_server.py  test_server_lifespan.py  test_server_messages.py  test_tools_common.py  test_tools_domain_status_properties.py  test_version.py
