[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gandi-mcp"
version = "0.1.0"
description = "Production-grade Python MCP server for the Gandi.net v5 API (domains, LiveDNS, email, billing, organization, certificates)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "millsmillsymills" }]
keywords = [
    "gandi",
    "mcp",
    "model-context-protocol",
    "domains",
    "registrar",
    "dns",
    "livedns",
    "email",
    "certificates",
    "tls",
    "fastmcp",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.2.4,<4.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-recording>=0.13.2",
    "pytest-rerunfailures>=15.0",
    "respx>=0.23.1",
    "hypothesis>=6.152.4",
    "mutmut>=3.5.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "bandit[toml]>=1.9.4",
    "pip-audit>=2.7.3",
    "pre-commit>=4.6.0",
]

[project.scripts]
gandi-mcp = "gandi_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/millsmillsymills/gandi-mcp"
Repository = "https://github.com/millsmillsymills/gandi-mcp"
Issues = "https://github.com/millsmillsymills/gandi-mcp/issues"
Changelog = "https://github.com/millsmillsymills/gandi-mcp/releases"

# =============================================================================
# uv — constrain transitive deps (CVE patches)
# =============================================================================
[tool.uv]
# python-multipart < 0.0.27 has CVE-2026-42561 (DoS via multipart parser).
# fastmcp 3.2.x pins it transitively; lift the floor here so pip-audit is
# clean without a direct runtime dependency on it.
#
# vcrpy 8.x intercepts httpx via socket-level patching. vcrpy 9.x may change
# this. Lock the working range now (pytest-recording is the direct dep).
constraint-dependencies = [
    "python-multipart>=0.0.27",
    "vcrpy>=8.1,<9",
]

# =============================================================================
# Ruff — linting and formatting
# =============================================================================
[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "PT",   # flake8-pytest-style
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
    "PERF", # perflint
    "FURB", # refurb
    "LOG",  # flake8-logging
    "TID",  # flake8-tidy-imports
]
ignore = [
    "S101",    # assert used — fine in tests
    "S603",    # subprocess call — not relevant for MCP server
    "PLR0913", # too many function arguments — tool functions need many params
    "PLR0915", # too many statements — registration functions register many tools
    "PLR2004", # magic value comparison — acceptable in tests
    "PLC0415", # import not at top level — intentional for lazy loading and circular dep avoidance
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert is fine in tests
    "ARG001",  # unused function args (fixtures)
    "PLR2004", # magic values in tests
    "S106",    # hardcoded passwords in test fixtures
]
# FastMCP introspects type annotations at runtime, so Context/FastMCP must not be behind TYPE_CHECKING
"src/gandi_mcp/tools/**/*.py" = [
    "TC001",   # application imports needed at runtime for FastMCP annotation introspection
    "TC002",   # third-party imports needed at runtime for FastMCP annotation introspection
]
# Build-time asset-generation scripts — print is the right tool for CLI status output
"docs/assets/_*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["gandi_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# ty — strict type checking (replaces mypy)
# =============================================================================
[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unresolved-attribute = "error"
invalid-argument-type = "error"
invalid-return-type = "error"

[tool.ty.src]
respect-ignore-files = true

# =============================================================================
# Pytest — testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "mocked: respx-mocked tool tests (T2, intended for CI)",
    "contract: VCR-replayed real Gandi responses (T3, intended for CI)",
    "live: requires GANDI_TOKEN + teamrocket.network (T4, LOCAL ONLY)",
    "smoke: minimal live-read release gate (subset of live)",
    "slow: marks tests that are slow to run",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:httpx.*",
]

[tool.coverage.run]
source = ["gandi_mcp"]
branch = true
omit = ["tests/*", "src/gandi_mcp/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# =============================================================================
# Mutmut — mutation testing (run locally; not in CI yet)
# =============================================================================
[tool.mutmut]
paths_to_mutate = [
    "src/gandi_mcp/clients/base.py",
    "src/gandi_mcp/errors.py",
    "src/gandi_mcp/server.py",
    "src/gandi_mcp/tools/_common.py",
]
tests_dir = ["tests/unit/"]
also_copy = [
    "src/gandi_mcp/__init__.py",
    "src/gandi_mcp/__main__.py",
    "src/gandi_mcp/_logging.py",
    "src/gandi_mcp/config.py",
    "src/gandi_mcp/py.typed",
    "src/gandi_mcp/clients/__init__.py",
    "src/gandi_mcp/clients/gandi.py",
    "src/gandi_mcp/tools/__init__.py",
    "src/gandi_mcp/tools/billing.py",
    "src/gandi_mcp/tools/certificate.py",
    "src/gandi_mcp/tools/domain.py",
    "src/gandi_mcp/tools/email.py",
    "src/gandi_mcp/tools/livedns.py",
    "src/gandi_mcp/tools/organization.py",
]

# =============================================================================
# Bandit — security scanning
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used — fine in production code for invariants

# =============================================================================
# Hatch — build configuration
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/gandi_mcp"]
